--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^4.0",
+        "filament/forms": "^4.1.10",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "livewire/flux": "^2.6",
         "livewire/volt": "^1.7.0",
         "santigarcor/laratrust": "^8.5"
     },
